--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fullcalendar/daygrid": "^5.11.0",
+    "@fullcalendar/react": "^5.11.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
     "@testing-library/jest-dom": "^5.16.4",
@@ -13,8 +15,6 @@
     "@testing-library/user-event": "^13.5.0",
     "ag-grid-community": "^27.2.1",
     "ag-grid-react": "^27.2.1",
-    "date-fns": "^2.28.0",
-    "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
