--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "ag-grid-community": "^27.2.1",
     "ag-grid-react": "^27.2.1",
     "chart.js": "^3.7.1",
+    "react": "^18.1.0",
     "react-chartjs-2": "^4.1.0",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.1.0",
     "react-moment": "^1.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
