environmental variables added

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-//hiding resources inside .env file 
+//adding environment variables  
 REACT_APP_API_CUSTOMERS='https://customerrest.herokuapp.com/api/customers'
 REACT_APP_API_TRAININGS = 'https://customerrest.herokuapp.com/api/trainings'
 REACT_APP_API_CUSTOMERS_TRAININGS = 'https://customerrest.herokuapp.com/gettrainings'
